...
    <string name="enterPhoneNum">Enter your phone number:</string>
    <string name="phoneNumTitle">New Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="searchName">Search by Name</string>
    <string name="searchCategory">Search by Category</string>
    <string name="nearYou">Find Nearby</string>
    <string name="search">Search</string>
    <string name="categories"><u><b>Categories</b></u></string>
    <string name="selected"><u><b>Selected</b></u></string>
    <string name="add_cat">Select category for search</string>
    <string name="remove_cat">Deselect category for search</string>
    <string name="ok">Okay</string>
    <string name="selectAtLeastOneCat">Select at least 1 category</string>
    <string name="defaultMenuTitle">Menu</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Back to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="enterResName">Enter restaurant name here</string>
    <string name="emptyName">Enter a restaurant name for search</string>
    <string name="party_of">Party of:</string>
...
    <string name="menu_item_description">item description</string>
    <string name="tableahead_img">tableahead title image</string>
    <string name="restaurants"><u><b>Restaurants</b></u></string>
    <string name="order_by">Sort by:</string>
    <string name="popularity">Popularity</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="base_dist">not found</string>
    <string name="big_dist" translatable="false">999+ km</string>
    <string name="orderButton">Order</string>
    <string name="orderText">Order</string>
    <string name="removeItemDialog">Remove item?</string>
    <string name="orderBack">Confirm</string>
...
    <string name="deleteConfirm">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bookingDeleted">Booking Deleted Successfully!</string>
    <string name="error_deleting_booking">Could not delete booking!</string>
    <string name="selectValidTime">Please select a valid time.</string>
    <string name="add_items">Add Items</string>
    <string name="lastName">Last Name</string>
    <string name="updateAccountFail">Failed to update account info!</string>
    <string name="updateAccountFailInfo">Check if your password is long enough and your email is valid</string>
    <string name="signOut">Sign Out</string>
    <string name="tut0">Welcome\n\nWelcome to tableahead! In this tutorial, we will cover
        how to use the app. You can press \"Next\" for the next part of the tutorial, \"Back\" to
...
        Google password requirements and email addresses are legitimate. Please note, you
        cannot change your email without verifying your current email. You can also add a phone
        number to your account if you wish. Adding it is similar to editing other parts of your
        account. Lastly, you can also sign out of the app by tapping \"Sign Out\".</string>
    <string name="Subtotal">"Subtotal: $"</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="placeholderName">John Doe</string>
    <string name="placeholderComment">Great food and service!</string>
    <string name="rating_colon">Rating:</string>
    <string name="edit">Edit</string>
...
