...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.CategoryScreen"
    android:id="@+id/category_screen">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/categories_tv"
        app:layout_constraintBottom_toTopOf="@id/search_btn"
        android:name="com.example.tableahead.search.ProgressBarFragment"
        tools:layout="@layout/fragment_progress_bar">
    </androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:layout_width="0dp"
...
