...
                android:layout_height="wrap_content"
                android:text="@string/base_data"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn"
                android:layout_width="wrap_content"
...
