...
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="104dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <TextView
...
