<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/review_write_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/rating"
    android:orientation="vertical"
    tools:context=".RestaurantReviewWrite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back" />

                <ImageButton
                    android:id="@+id/helpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/help_icon" />

                <ImageButton
                    android:id="@+id/homeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/icons8_home_32" />

                <ImageButton
                    android:id="@+id/accountBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/back"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:scaleType="center"
                    android:src="@drawable/account_icon" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RatingBar
        android:id="@+id/ratingBarReview"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressDrawable="@drawable/rating_star"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <EditText
        android:id="@+id/editTxtRatingContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="comment"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comments"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarReview" />

    <Button
        android:id="@+id/btnSubmitReview"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRatingContent"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="102dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmitReview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtRatingContent"
        app:layout_constraintVertical_bias="0.19" />


</androidx.constraintlayout.widget.ConstraintLayout>